# beancount-ch

./: .gitignore  Cargo.toml  README.md  about.hbs  about.toml  nfpm.yaml  release.sh
src/: bcv.rs  beancount.rs  cembra.rs  guessing.rs  main.rs  revolut.rs
